force-app/main/default/objects/SVMXC__Service_Contract_Products__c/SVMXC__Service_Contract_Products__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Installed products, part numbers, or groups of products entitled by this service contract.</description>
    <label>Covered Product</label>
    <nameField>
        <displayFormat>SCPN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covered Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>