force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>The Status values for Service Contract during their active life.</description>
    <formula>Text(SVMXC__Service_Contract__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>