force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/ERP_Contract_Line_Number__c.field-meta.xml
<CustomField>
     <fullName>ERP_Contract_Line_Number__c</fullName>
    <description>This field shows the ERP Contract Line Number from Service/Maintenance Contract</description>
    <formula>SVMXC__Service_Contract__r.ERP_Contract_Line_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Contract Line Number</label>
    <type>Text</type>
</CustomField>