force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/Service_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan_Name__c</fullName>
    <description>Displays Service Plan Name related to Service Contract.</description>
    <formula>SVMXC__Service_Contract__r.SVMXC__Service_Plan__r.Name</formula>
    <label>Service Plan Name</label>
    <type>Text</type>
</CustomField>