force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/SVMXC__End_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__End_Date__c</fullName>
    <description>End date of service contract/warranty at the time of entitlement</description>
    <inlineHelpText>End date of service contract/warranty at the time of entitlement</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>