force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/SVMXC__Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the installed product covered by the service contract. Is a lookup to an existing installed product record in ServiceMax</description>
    <inlineHelpText>Name of the installed product covered by the service contract. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipName>R00N70000001hzdkEAA</relationshipName>
    <type>Lookup</type>
</CustomField>