force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/SVMXC__Number_Of_PMs_Delivered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Number_Of_PMs_Delivered__c</fullName>
    <description>Number of preventive maintenance work orders completed for this product so far. Calculated automatically when PM work orders are closed</description>
    <label>Number Of PMs Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>