force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/SVMXC__Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the product covered by the service contract. Is a lookup to an existing salesforce product record</description>
    <inlineHelpText>Name of the product covered by the service contract. Is a lookup to an existing salesforce product record</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>R00N70000001hzcyEAA</relationshipName>
    <type>Lookup</type>
</CustomField>