force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/SVMXC__SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</description>
    <inlineHelpText>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</inlineHelpText>
    <label>SLA Terms</label>
    <referenceTo>SVMXC__Service_Level__c</referenceTo>
    <relationshipName>Covered_Products</relationshipName>
    <type>Lookup</type>
</CustomField>