force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/SVMXC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Start_Date__c</fullName>
    <description>Start date of service contract/warranty at the time of entitlement</description>
    <inlineHelpText>Start date of service contract/warranty at the time of entitlement</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>