force-app/main/default/objects/SVMXC__Service_Contract_Products__c/fields/Zuora_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Subscription_ID__c</fullName>
    <description>This field shows the Zuora_Subscription_ID from Service/Maintenance Contract</description>
    <formula>SVMXC__Service_Contract__r.Zuora_Subscription_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription ID</label>
    <type>Text</type>
</CustomField>